--- a/microservice1.yml
+++ b/microservice1.yml
@@ -1,10 +1,4 @@
-spring:
-  application:
-    name: microservice1
-  
-    
-server:
-  port: 7003
-  
+message:
+  welcome to first microservice..!!
   
        
