--- a/microservice1.yml
+++ b/microservice1.yml
@@ -1,4 +1,13 @@
 message:
   welcome to first microservice..!!
   
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8700/eureka
+  instance:
+    hostname: localhost
+  
        
