--- a/eureka_application.yml
+++ b/eureka_application.yml
@@ -1,5 +1,11 @@
 spring:
   application:
     name: eureka-server
+    
+eureka:
+  client:
+    register-with-eureka: flase
+    fetch-registry: flase
+    
   
        
