--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -1,6 +1,14 @@
 spring:
   application:
     name: eureka-server
+
+server:
+  port:7002
+  
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
     
   
        
