--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -7,8 +7,8 @@ server:
   
 eureka:
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    registerWithEureka: false
+    fetchRegistry: false
     
   
        
